Added export button + prototype event handler fix for standalone apps (listenforevent).

--- a/public/html/tests.html
+++ b/public/html/tests.html
@@ -14,94 +14,94 @@
                 <p id="Test1-0Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test1-1Li" class="SubTestLiProto">                <p id="Test1-1Tag" class="SubTestTagProto">Test 1-1: dobject</p>
-                <p id="Test1-1Output" class="waitingProto">status: none</p>
+                <p id="Test1-1Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test1-2Li" class="SubTestLiProto">                <p id="Test1-2Tag" class="SubTestTagProto">Set/get property 'foo bar' should throw error.</p>
-                <p id="Test1-2Output" class="waitingProto">status: none</p>
+                <p id="Test1-2Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test1-3Li" class="SubTestLiProto">                <p id="Test1-3Tag" class="SubTestTagProto">Test 1-3: Set/get property 'foo-bar' should return given value.</p>
-                <p id="Test1-3Output" class="waitingProto">status: none</p>
+                <p id="Test1-3Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test1-4Li" class="SubTestLiProto">                <p id="Test1-4Tag" class="SubTestTagProto">Test 1-4: Get property 'foo bar' should throw error.</p>
-                <p id="Test1-4Output" class="waitingProto">status: none</p>
+                <p id="Test1-4Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test1-5Li" class="SubTestLiProto">                <p id="Test1-5Tag" class="SubTestTagProto">Test 1-5: Test 1-5: Set/get property 'foo_bar' should return given value.</p>
-                <p id="Test1-5Output" class="waitingProto">status: none</p>
+                <p id="Test1-5Output" class="succeedProto">status: Succeeded</p>
 </li>
 </ul>
 </li>
           <li id="Test2Li" class="liProto">            <button id="Test2Button" class="startProto">Dobject: Property Name Tests</button>
-            <p id="Test2Output" class="waitingProto">status: none</p>
+            <p id="Test2Output" class="succeedProto">status: Succeeded</p>
             <ul id="Test2Sublist" class="SubTestProto">              <li id="Test2-newSubTest" class="SubTestNewProto">                <input id="Test2-newInput" class="SubTestNewInputProto" value="" />
                 <button id="Test2-newButton" class="SubTestNewButtonProto">Create New SubTest</button>
 </li>
               <li id="Test2-0Li" class="SubTestLiProto">                <p id="Test2-0Tag" class="SubTestTagProto">Test 2-0: Set/get property 'foo' should return given value.</p>
-                <p id="Test2-0Output" class="waitingProto">status: none</p>
+                <p id="Test2-0Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test2-1Li" class="SubTestLiProto">                <p id="Test2-1Tag" class="SubTestTagProto">Test 2-1: Set/get property 'FooBar' should return given value.</p>
-                <p id="Test2-1Output" class="waitingProto">status: none</p>
+                <p id="Test2-1Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test2-2Li" class="SubTestLiProto">                <p id="Test2-2Tag" class="SubTestTagProto">Test 2-2: Set/get property 'foo bar' should throw error.</p>
-                <p id="Test2-2Output" class="waitingProto">status: none</p>
+                <p id="Test2-2Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test2-3Li" class="SubTestLiProto">                <p id="Test2-3Tag" class="SubTestTagProto">Test 2-3: Set/get property 'foo-bar' should return given value.</p>
-                <p id="Test2-3Output" class="waitingProto">status: none</p>
+                <p id="Test2-3Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test2-4Li" class="SubTestLiProto">                <p id="Test2-4Tag" class="SubTestTagProto">Test 2-4: Get property 'foo bar' should throw error.</p>
-                <p id="Test2-4Output" class="waitingProto">status: none</p>
+                <p id="Test2-4Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test2-5Li" class="SubTestLiProto">                <p id="Test2-5Tag" class="SubTestTagProto">Test 2-5: Set/get property 'foo_bar' should return given value.</p>
-                <p id="Test2-5Output" class="waitingProto">status: none</p>
+                <p id="Test2-5Output" class="succeedProto">status: Succeeded</p>
 </li>
 </ul>
 </li>
           <li id="Test3Li" class="liProto">            <button id="Test3Button" class="startProto">Object: Id Name Tests</button>
-            <p id="Test3Output" class="waitingProto">status: none</p>
+            <p id="Test3Output" class="succeedProto">status: Succeeded</p>
             <ul id="Test3Sublist" class="SubTestProto">              <li id="Test3-newSubTest" class="SubTestNewProto">                <input id="Test3-newInput" class="SubTestNewInputProto" value="" />
                 <button id="Test3-newButton" class="SubTestNewButtonProto">Create New SubTest</button>
 </li>
               <li id="Test3-0Li" class="SubTestLiProto">                <p id="Test3-0Tag" class="SubTestTagProto">Test 3-0: Make object with id 'foo'.</p>
-                <p id="Test3-0Output" class="waitingProto">status: none</p>
+                <p id="Test3-0Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test3-1Li" class="SubTestLiProto">                <p id="Test3-1Tag" class="SubTestTagProto">Test 3-1: Make object with id 'FooBar'.</p>
-                <p id="Test3-1Output" class="waitingProto">status: none</p>
+                <p id="Test3-1Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test3-2Li" class="SubTestLiProto">                <p id="Test3-2Tag" class="SubTestTagProto">Test 3-2: Make object with id 'foo-2'.</p>
-                <p id="Test3-2Output" class="waitingProto">status: none</p>
+                <p id="Test3-2Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test3-3Li" class="SubTestLiProto">                <p id="Test3-3Tag" class="SubTestTagProto">Test 3-3: Make object with id 'foo_2'.</p>
-                <p id="Test3-3Output" class="waitingProto">status: none</p>
+                <p id="Test3-3Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test3-4Li" class="SubTestLiProto">                <p id="Test3-4Tag" class="SubTestTagProto">Test 3-4: Making 2 objects with id 'foo' should result in an error.</p>
-                <p id="Test3-4Output" class="waitingProto">status: none</p>
+                <p id="Test3-4Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test3-5Li" class="SubTestLiProto">                <p id="Test3-5Tag" class="SubTestTagProto">Test 3-5: Making an object with id 'foo bar' should result in an error.</p>
-                <p id="Test3-5Output" class="waitingProto">status: none</p>
+                <p id="Test3-5Output" class="succeedProto">status: Succeeded</p>
 </li>
 </ul>
 </li>
           <li id="Test4Li" class="liProto">            <button id="Test4Button" class="startProto">Dobject: Id Name Tests</button>
-            <p id="Test4Output" class="waitingProto">status: none</p>
+            <p id="Test4Output" class="succeedProto">status: Succeeded</p>
             <ul id="Test4Sublist" class="SubTestProto">              <li id="Test4-newSubTest" class="SubTestNewProto">                <input id="Test4-newInput" class="SubTestNewInputProto" value="" />
                 <button id="Test4-newButton" class="SubTestNewButtonProto">Create New SubTest</button>
 </li>
               <li id="Test4-0Li" class="SubTestLiProto">                <p id="Test4-0Tag" class="SubTestTagProto">Test 4-0: Make object with id 'foo'.</p>
-                <p id="Test4-0Output" class="waitingProto">status: none</p>
+                <p id="Test4-0Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test4-1Li" class="SubTestLiProto">                <p id="Test4-1Tag" class="SubTestTagProto">Test 4-1: Make object with id 'FooBar'.</p>
-                <p id="Test4-1Output" class="waitingProto">status: none</p>
+                <p id="Test4-1Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test4-2Li" class="SubTestLiProto">                <p id="Test4-2Tag" class="SubTestTagProto">Test 4-2: Make object with id 'foo-2'.</p>
-                <p id="Test4-2Output" class="waitingProto">status: none</p>
+                <p id="Test4-2Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test4-3Li" class="SubTestLiProto">                <p id="Test4-3Tag" class="SubTestTagProto">Test 4-3: Make object with id 'foo_2'.</p>
-                <p id="Test4-3Output" class="waitingProto">status: none</p>
+                <p id="Test4-3Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test4-4Li" class="SubTestLiProto">                <p id="Test4-4Tag" class="SubTestTagProto">Test 4-4: Making 2 objects with id 'foo' should result in an error.</p>
-                <p id="Test4-4Output" class="waitingProto">status: none</p>
+                <p id="Test4-4Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test4-5Li" class="SubTestLiProto">                <p id="Test4-5Tag" class="SubTestTagProto">Test 4-5: Making an object with id 'foo bar' should result in an error.</p>
-                <p id="Test4-5Output" class="waitingProto">status: none</p>
+                <p id="Test4-5Output" class="succeedProto">status: Succeeded</p>
 </li>
 </ul>
 </li>
@@ -1176,7 +1176,7 @@
 </div>
 </div>
 </div>
-    <div id="SynerJ-info">      <div id="SynerJ-idGenerator">3863</div>
+    <div id="SynerJ-info">      <div id="SynerJ-idGenerator">3889</div>
 </div>
 </body>
 </html>
