added correct content type for aexporting zip.

--- a/public/html/tests.html
+++ b/public/html/tests.html
@@ -106,87 +106,87 @@
 </ul>
 </li>
           <li id="Test5Li" class="liProto">            <button id="Test5Button" class="startProto">Property Value Tests</button>
-            <p id="Test5Output" class="waitingProto">status: none</p>
+            <p id="Test5Output" class="succeedProto">status: Succeeded</p>
             <ul id="Test5Sublist" class="SubTestProto">              <li id="Test5-newSubTest" class="SubTestNewProto">                <input id="Test5-newInput" class="SubTestNewInputProto" value="Objects: object reference should be undefined when the object is deleted." />
                 <button id="Test5-newButton" class="SubTestNewButtonProto">Create New SubTest</button>
 </li>
               <li id="Test5-0Li" class="SubTestLiProto">                <p id="Test5-0Tag" class="SubTestTagProto">Test 5-0: Strings</p>
-                <p id="Test5-0Output" class="waitingProto">status: none</p>
+                <p id="Test5-0Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test5-1Li" class="SubTestLiProto">                <p id="Test5-1Tag" class="SubTestTagProto">Test 5-1: Numbers</p>
-                <p id="Test5-1Output" class="waitingProto">status: none</p>
+                <p id="Test5-1Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test5-2Li" class="SubTestLiProto">                <p id="Test5-2Tag" class="SubTestTagProto">Test 5-2: Booleans</p>
-                <p id="Test5-2Output" class="waitingProto">status: none</p>
+                <p id="Test5-2Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test5-3Li" class="SubTestLiProto">                <p id="Test5-3Tag" class="SubTestTagProto">Test 5-3: Objects</p>
-                <p id="Test5-3Output" class="waitingProto">status: none</p>
+                <p id="Test5-3Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test5-4Li" class="SubTestLiProto">                <p id="Test5-4Tag" class="SubTestTagProto">Test 5-4: Arrays</p>
-                <p id="Test5-4Output" class="waitingProto">status: none</p>
+                <p id="Test5-4Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test5-5Li" class="SubTestLiProto">                <p id="Test5-5Tag" class="SubTestTagProto">Test 5-5: Objects: refer to correct object when referred object its id is changed.</p>
-                <p id="Test5-5Output" class="waitingProto">status: none</p>
+                <p id="Test5-5Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test5-6Li" class="SubTestLiProto">                <p id="Test5-6Tag" class="SubTestTagProto">Test 5-6: Objects: object reference should be undefined when the object is deleted.</p>
-                <p id="Test5-6Output" class="waitingProto">status: none</p>
+                <p id="Test5-6Output" class="succeedProto">status: Succeeded</p>
 </li>
 </ul>
 </li>
           <li id="Test6Li" class="liProto">            <button id="Test6Button" class="startProto">Prototype Tests: Properties</button>
-            <p id="Test6Output" class="waitingProto">status: none</p>
+            <p id="Test6Output" class="succeedProto">status: Succeeded</p>
             <ul id="Test6Sublist" class="SubTestProto">              <li id="Test6-newSubTest" class="SubTestNewProto">                <input id="Test6-newInput" class="SubTestNewInputProto" value="Trigger error when trying to make cyclic prototype chain II." />
                 <button id="Test6-newButton" class="SubTestNewButtonProto">Create New SubTest</button>
 </li>
               <li id="Test6-0Li" class="SubTestLiProto">                <p id="Test6-0Tag" class="SubTestTagProto">Test 6-0: Inherit property from parent, if not overridden.</p>
-                <p id="Test6-0Output" class="waitingProto">status: none</p>
+                <p id="Test6-0Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test6-1Li" class="SubTestLiProto">                <p id="Test6-1Tag" class="SubTestTagProto">Test 6-1: Inherit property from indirect parent, if not overridden.</p>
-                <p id="Test6-1Output" class="waitingProto">status: none</p>
+                <p id="Test6-1Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test6-2Li" class="SubTestLiProto">                <p id="Test6-2Tag" class="SubTestTagProto">Test 6-2: Override inherited property, retrieve, overwrite and retrieve again.</p>
-                <p id="Test6-2Output" class="waitingProto">status: none</p>
+                <p id="Test6-2Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test6-3Li" class="SubTestLiProto">                <p id="Test6-3Tag" class="SubTestTagProto">Test 6-3: Setting a cyclic prototype chain should throw an error I.</p>
-                <p id="Test6-3Output" class="waitingProto">status: none</p>
+                <p id="Test6-3Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test6-4Li" class="SubTestLiProto">                <p id="Test6-4Tag" class="SubTestTagProto">Test 6-4: Setting a cyclic prototype chain should throw an error II</p>
-                <p id="Test6-4Output" class="waitingProto">status: none</p>
+                <p id="Test6-4Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test6-5Li" class="SubTestLiProto">                <p id="Test6-5Tag" class="SubTestTagProto">Test 6-3: Calling an inherited method, 'this' should point to the object called upon.</p>
-                <p id="Test6-5Output" class="waitingProto">status: none</p>
+                <p id="Test6-5Output" class="succeedProto">status: Succeeded</p>
 </li>
 </ul>
 </li>
           <li id="Test7Li" class="liProto">            <button id="Test7Button" class="startProto">Prototype Tests: Events</button>
-            <p id="Test7Output" class="waitingProto">status: none</p>
+            <p id="Test7Output" class="succeedProto">status: Succeeded</p>
             <ul id="Test7Sublist" class="SubTestProto">              <li id="Test7-newSubTest" class="SubTestNewProto">                <input id="Test7-newInput" class="SubTestNewInputProto" value="Override event." />
                 <button id="Test7-newButton" class="SubTestNewButtonProto">Create New SubTest</button>
 </li>
               <li id="Test7-0Li" class="SubTestLiProto">                <p id="Test7-0Tag" class="SubTestTagProto">Test 7-0: Set up prototype chain, then add eventHandler to parent, then trigger on child.</p>
-                <p id="Test7-0Output" class="waitingProto">status: none</p>
+                <p id="Test7-0Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test7-1Li" class="SubTestLiProto">                <p id="Test7-1Tag" class="SubTestTagProto">Test 7-1: Add eventHandler to parent, set up prototype chain, then trigger on child.</p>
-                <p id="Test7-1Output" class="waitingProto">status: none</p>
+                <p id="Test7-1Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test7-2Li" class="SubTestLiProto">                <p id="Test7-2Tag" class="SubTestTagProto">Test 7-2: Override inherited event.</p>
-                <p id="Test7-2Output" class="waitingProto">status: none</p>
+                <p id="Test7-2Output" class="succeedProto">status: Succeeded</p>
 </li>
 </ul>
 </li>
           <li id="Test8Li" class="liProto">            <button id="Test8Button" class="startProto">Prototype Tests: CSS</button>
-            <p id="Test8Output" class="waitingProto">status: none</p>
+            <p id="Test8Output" class="succeedProto">status: Succeeded</p>
             <ul id="Test8Sublist" class="SubTestProto">              <li id="Test8-newSubTest" class="SubTestNewProto">                <input id="Test8-newInput" class="SubTestNewInputProto" value="Inherit css style from parent, after overriding and removal." />
                 <button id="Test8-newButton" class="SubTestNewButtonProto">Create New SubTest</button>
 </li>
               <li id="Test8-0Li" class="SubTestLiProto">                <p id="Test8-0Tag" class="SubTestTagProto">Test 8-0: Inherit css style from parent.</p>
-                <p id="Test8-0Output" class="waitingProto">status: none</p>
+                <p id="Test8-0Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test8-1Li" class="SubTestLiProto">                <p id="Test8-1Tag" class="SubTestTagProto">Test 8-1: Inherit css style from indirect parent.</p>
-                <p id="Test8-1Output" class="waitingProto">status: none</p>
+                <p id="Test8-1Output" class="succeedProto">status: Succeeded</p>
 </li>
               <li id="Test8-2Li" class="SubTestLiProto">                <p id="Test8-2Tag" class="SubTestTagProto">Test 8-2: Inherit css style from parent, after overriding and removal.</p>
-                <p id="Test8-2Output" class="waitingProto">status: none</p>
+                <p id="Test8-2Output" class="succeedProto">status: Succeeded</p>
 </li>
 </ul>
 </li>
@@ -1176,7 +1176,7 @@
 </div>
 </div>
 </div>
-    <div id="SynerJ-info">      <div id="SynerJ-idGenerator">3889</div>
+    <div id="SynerJ-info">      <div id="SynerJ-idGenerator">4019</div>
 </div>
 </body>
 </html>
