removed double class lines from car.css => this is a bug, cause needs to be found.

--- a/public/html/car.html
+++ b/public/html/car.html
@@ -13,13 +13,13 @@
 </div>
         <div id="toolbar">          <button id="start">start</button>
           <button id="stop">stop</button>
-          <input id="x-input" value="10" />
-          <input id="y-input" value="-100" />
+          <input id="x-input" value="100" />
+          <input id="y-input" value="100" />
           <button id="go-to">go to!</button>
 </div>
 </div>
       <div id="normal-objects">        <div id="wheelProto" style=""></div>
-        <div id="carProto" style="" class="red">          <div id="red" style=""></div>
+        <div id="carProto" style="" class="green">          <div id="red" style=""></div>
           <div id="green" style=""></div>
 </div>
 </div>
